# agent-shell

./: 404.html  README.md  index.html  journal-agent-shell.mdx  mkdocs.yml  pyproject.toml  sitemap.xml
.worktrees/issue-6535e621-05-approval-gate/: pyproject.toml
.worktrees/issue-6535e621-05-approval-gate/collab/: capability_registry.py
.worktrees/issue-6535e621-06-conflict-resolver/collab/: conflict_resolver.py  types.py
.worktrees/issue-6535e621-06-conflict-resolver/tests/: __init__.py  test_session_manager.py
.worktrees/issue-6535e621-07-agent-coordinator/: .gitignore  README.md
.worktrees/issue-6535e621-07-agent-coordinator/collab/: session_manager.py
.worktrees/issue-6535e621-07-agent-coordinator/tests/: test_capability_registry.py  test_types.py
architecture/: index.html
collab/: __init__.py
contributing/: index.html
docs/: architecture.md  contributing.md  index.md  reference.md  research.md
docs/getting-started/: installation.md  quick-start.md
getting-started/installation/: index.html
getting-started/quick-start/: index.html
paper/: main.aux  main.out  main.tex
reference/: index.html
research/: index.html
search/: search_index.json
tests/: conftest.py  test_session_capability_integration.py
