[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-shell"
version = "0.1.0"
description = "Real-time collaborative terminal for concurrent AI agent execution."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Andrew Young", email = "research@automate-capture.com" },
]
keywords = ["AI agents", "Terminal", "Collaboration", "Operational Transforms", "Concurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # no external dependencies
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/Lumi-node/agent-shell"
Documentation = "https://lumi-node.github.io/agent-shell/"
Repository = "https://github.com/Lumi-node/agent-shell"
Issues = "https://github.com/Lumi-node/agent-shell/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
